# email-gallery

./: Readme.md  pyproject.toml
email_helper/: imap_searcher.py
email_helper/search_handler/: __init__.py  attachments.py
tests/: test_email_helper.py
