[tool.poetry]
name = "email-helper"
version = "0.1.0"
description = ""
authors = ["Ray <linxray@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
imapsr = "email_helper.imap_searcher:main"
